tests/cases/match/errors/match-product-nonexhaustive-bool.ari
fn main() -> i64 {
  return match (true, false) {
    (true, _) => 1,
  };
}
